--- a/.github/workflows/c-deploy-test.yml
+++ b/.github/workflows/c-deploy-test.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Put environment variable into the env context
         run: echo "app-name=${APP_NAME}" >> ${GITHUB_ENV}
 
-        name: Push to release
+      - name: Push to release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
