--- a/.github/workflows/c-deploy-test.yml
+++ b/.github/workflows/c-deploy-test.yml
@@ -8,7 +8,7 @@ on:
 
 # Must match the project() name
 env:
-  APP_NAME: app
+  APP_NAME: app.elf
 
 # Allow this workflow to write back to the repository
 permissions:
