--- a/.github/workflows/c-deploy-test.yml
+++ b/.github/workflows/c-deploy-test.yml
@@ -8,7 +8,7 @@ on:
 
 # Must match the project() name
 env:
-  APP_NAME: app.elf
+  APP_NAME: app
 
 # Allow this workflow to write back to the repository
 permissions:
@@ -39,6 +39,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: app.elf
+          files: app
           body_path: CHANGELOG.md
 
